mobile layout now has max-width to prevent gant middle column / artwork teaser now hidden on mobile

--- a/css/large.css
+++ b/css/large.css
@@ -1,3 +1,7 @@
+.wrapper {
+	max-width: 960px;
+}
+
 .intro-text {
 	width: 40%;
 	left: 50%;
