--- a/css/medium.css
+++ b/css/medium.css
@@ -10,6 +10,7 @@ header h1 {
 
 
 
+
 /*
 * Introduction
 */
@@ -32,5 +33,63 @@ header h1 {
 	left: 10%;
 	padding-left: 2%;
 	padding-right: 2%;
+}
+
+.artwork-panel,
+.artwork-teaser {
+	display: block;
+}
+
+article.show-art {
+	margin-top: 0;
+}
+
+.artwork-panel,
+.artwork-teaser {
+	position: absolute;
+	top: 3em;
+	z-index: 15;
+	padding: 1em;
+	font-size: 0.75em;
+}
+
+.artwork-teaser {
+	background: rgba(255,255,255,0.33);
+	right: 0;
+	color: #000;
+}
+
+.artwork-teaser.hidden {
+	right: -10em;
+}
+
+.artwork-panel {
+	right: -15.44444444444444em;
+	background: rgba(0,0,0,0.8);
+	max-width: 11.16666666666667em;
+	color: #fff;
+}
+
+.artwork-panel.reveal {
+	right: 0;
+
+}
+
+.artwork-panel p,
+.artwork-teaser p {
+	margin-bottom: 0.5em;
+	line-height: 1.3em;
+}
+
+.artwork-panel a {
+	color: #fff;
+}
+
+.close-panel {
+	position:absolute;
+	top: 0.5em;
+	right: 1em;
+	text-decoration: none;
+	font-size: 1.25em;
 }
 
